--- a/src/index.html
+++ b/src/index.html
@@ -9,84 +9,119 @@
   </head>
   <body>
     <div id="app" class="flex h-screen flex-col">
-      <div class="flex flex-row h-[90%] w-screen">
+      <div class="flex flex-row h-[90%] w-screen justify-between">
         <div id="left-panel" class="h-full w-3/12 min-w-64 max-w-80 select-none">
           <div class="flex flex-row pt-4 pl-2 items-center absolute">
             <img src="./pictures/logo.png" class="w-12 h-12">
             <h1 class="text-white-1 font-bold text-xl xl:text-2xl">eleria Music Player</h1>
           </div>
           <div class="flex w-full h-full flex-col justify-center">
-            <div class="h-14 flex items-center left-menu-selection left-menu-selection-selected">
-              <h3 class="text-white-1 text-mukta font-lg pl-8">Albums</h3>
+            <div class="h-16 flex items-center left-menu-selection left-menu-selection-selected">
+              <h3 class="text-white-1 text-mukta text-xl pl-8">Albums</h3>
             </div>
 <!--            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mt-2 mb-3"></div>-->
-            <div class="h-14 flex items-center">
-              <h3 class="text-white-1 text-mukta font-lg pl-8">Morceaux</h3>
+            <div class="h-16 flex items-center">
+              <h3 class="text-white-1 text-mukta text-xl pl-8">Morceaux</h3>
             </div>
             <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mb-1 mt-1"></div>
-            <div class="h-14 flex items-center">
-              <h3 class="text-white-1 text-mukta font-lg pl-8">Playlists</h3>
+            <div class="h-16 flex items-center">
+              <h3 class="text-white-1 text-mukta text-xl pl-8">Playlists</h3>
             </div>
             <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mb-1 mt-1"></div>
-            <div class="h-14 flex items-center">
-              <h3 class="text-white-1 text-mukta font-lg pl-8">Downloader</h3>
+            <div class="h-16 flex items-center">
+              <h3 class="text-white-1 text-mukta text-xl pl-8">Downloader</h3>
             </div>
           </div>
         </div>
-        <div id="main-panel" class="h-full w-10/12">
-          <div data-tauri-drag-region id="custom-top-bar" class="w-screen h-14 flex justify-end pr-2 items-center z-50 absolute left-0 top-0">
-            <div class="text-white-1 flex flex-row space-x-2">
-              <div class="w-8 h-8 hover:opacity-40 hover:left-menu-selection cursor-pointer" id="titlebar-minimize">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M18 12H6" />
+        <div id="main-panel" class="h-full w-10/12 relative ml-auto mb-auto">
+          <div data-tauri-drag-region id="custom-top-bar" class="w-full h-14 flex justify-end pr-2 z-50">
+            <div class="text-white-1 flex flex-row space-x-2 mt-2">
+              <div class="w-8 h-8 min-w-[2rem] min-h-[2rem] hover:opacity-40 hover:left-menu-selection cursor-pointer flex justify-center items-end" id="titlebar-minimize" style="padding-bottom: 8px">
+                <svg x="0px" y="0px" viewBox="0 0 10.2 1" class="w-3 h-3">
+                  <rect fill="currentColor" x="0" y="50%" width="10.2" height="1" />
                 </svg>
               </div>
-              <div class="w-8 h-8 hover:opacity-40 hover:left-menu-selection cursor-pointer" id="titlebar-maximize">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24">
-                  <path fill="currentColor" d="M4 4h16v16H4V4m2 4v10h12V8H6Z"/>
+              <div class="w-8 h-8 min-w-[2rem] min-h-[2rem] hover:opacity-40 hover:left-menu-selection cursor-pointer flex justify-center items-center" id="titlebar-maximize">
+                <svg viewBox="0 0 10 10" class="w-3 h-3">
+                  <path fill="currentColor" d="M0,0v10h10V0H0z M9,9H1V1h8V9z"/>
                 </svg>
               </div>
-              <div class="w-8 h-8 hover:opacity-40 hover:left-menu-selection cursor-pointer" id="titlebar-close">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+              <div class="w-8 h-8 min-w-[2rem] min-h-[2rem] hover:opacity-40 hover:left-menu-selection cursor-pointer flex justify-center items-center" id="titlebar-close">
+                <svg viewBox="0 0 10 10" class="w-3 h-3">
+                  <polygon fill="currentColor" points="10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1" />
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="w-full flex justify-end pr-4">
+            <div class="w-10 h-10 min-w-[2.5rem] min-h-[2.5rem] hover:opacity-40 hover:left-menu-selection cursor-pointer flex justify-center items-center" id="open-settings">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-9 h-9 text-white-1">
+                <path fill-rule="evenodd" d="M11.828 2.25c-.916 0-1.699.663-1.85 1.567l-.091.549a.798.798 0 01-.517.608 7.45 7.45 0 00-.478.198.798.798 0 01-.796-.064l-.453-.324a1.875 1.875 0 00-2.416.2l-.243.243a1.875 1.875 0 00-.2 2.416l.324.453a.798.798 0 01.064.796 7.448 7.448 0 00-.198.478.798.798 0 01-.608.517l-.55.092a1.875 1.875 0 00-1.566 1.849v.344c0 .916.663 1.699 1.567 1.85l.549.091c.281.047.508.25.608.517.06.162.127.321.198.478a.798.798 0 01-.064.796l-.324.453a1.875 1.875 0 00.2 2.416l.243.243c.648.648 1.67.733 2.416.2l.453-.324a.798.798 0 01.796-.064c.157.071.316.137.478.198.267.1.47.327.517.608l.092.55c.15.903.932 1.566 1.849 1.566h.344c.916 0 1.699-.663 1.85-1.567l.091-.549a.798.798 0 01.517-.608 7.52 7.52 0 00.478-.198.798.798 0 01.796.064l.453.324a1.875 1.875 0 002.416-.2l.243-.243c.648-.648.733-1.67.2-2.416l-.324-.453a.798.798 0 01-.064-.796c.071-.157.137-.316.198-.478.1-.267.327-.47.608-.517l.55-.091a1.875 1.875 0 001.566-1.85v-.344c0-.916-.663-1.699-1.567-1.85l-.549-.091a.798.798 0 01-.608-.517 7.507 7.507 0 00-.198-.478.798.798 0 01.064-.796l.324-.453a1.875 1.875 0 00-.2-2.416l-.243-.243a1.875 1.875 0 00-2.416-.2l-.453.324a.798.798 0 01-.796.064 7.462 7.462 0 00-.478-.198.798.798 0 01-.517-.608l-.091-.55a1.875 1.875 0 00-1.85-1.566h-.344zM12 15.75a3.75 3.75 0 100-7.5 3.75 3.75 0 000 7.5z" clip-rule="evenodd" />
+              </svg>
+            </div>
+          </div>
+          <div id="main-panel-content">
+              <div id="panel-album" class="pl-10 space-y-4 pt-16 pb-16 pr-10 absolute left-0 w-full flex flex-col min-h-[90%] max-h-[90%] hidden">
+                <h1 class="text-white-1 text-mukta text-4xl font-bold">Albums à votre disposition</h1>
+                <div id="panel-album-list" class="flex flex-wrap overflow-scroll"></div>
+              </div>
+            <div id="panel-tracks-list" class="pl-10 pr-10 pb-16 space-y-4 flex flex-col absolute left-0 min-h-[90%] max-h-[90%] w-full hidden">
+              <div class="absolute mr-20 top-0 right-0 cursor-pointer mt-2" id="panel-tracks-list-close-button">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-white-1">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
               </div>
+              <div class="flex flex-row">
+                <img class="w-52 h-52 shadow-2xl" id="panel-tracks-list-album-cover">
+                <div class="pl-8 flex flex-col justify-center h-52">
+                  <h1 class="text-mukta font-bold text-6xl text-white-1" id="panel-tracks-list-album-name"></h1>
+                  <div class="flex flex-row items-center mt-1 space-x-3">
+                    <h2 class="text-mukta font-semibold text-2xl text-white-1" id="panel-tracks-list-album-artist"></h2>
+                    <span class="text-lg text-mukta font-bold text-white-1"> - </span>
+                    <span class="text-lg text-mukta font-semibold text-white-1" id="panel-tracks-list-album-year"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col w-full pt-6 overflow-scroll" id="panel-tracks-list-container"></div>
             </div>
           </div>
         </div>
       </div>
-      <div id="bottom-panel" class="w-screen h-[10%] min-h-[85px] flex flex-col">
+      <div id="bottom-panel" class="w-screen h-[10%] min-h-[85px] flex flex-col fixed bottom-0 left-0">
         <div class="h-1 duration-500 ease-in-out" style="background: #0e91a6; width: 0;" id="music-progress"></div>
         <div class="w-full h-full flex flex-row">
           <div class="pl-5 flex flex-row space-x-4 h-full items-center basis-1/3">
-            <img class="w-16 h-16 object-cover rounded-lg" src="" id="music-cover">
+            <div class="w-16 h-16 rounded-lg bg-white-3" id="no-music-cover"></div>
+            <img class="w-16 h-16 object-cover rounded-lg hidden" src="" id="music-cover">
             <div class="flex flex-col justify-center">
-              <p class="text-mukta font-bold text-white-1 text-lg" id="music-title"></p>
+              <p class="text-mukta font-bold text-white-1 text-lg break-properly max-w-[20rem]" id="music-title"></p>
               <p class="text-mukta text-white-1 opacity-60 text-md" id="music-subtitle"></p>
               <p></p>
             </div>
           </div>
           <div class="flex basis-1/3 items-center justify-center space-x-7">
             <div class="rounded-full w-8 h-8 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267;">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M21 16.811c0 .864-.933 1.405-1.683.977l-7.108-4.062a1.125 1.125 0 010-1.953l7.108-4.062A1.125 1.125 0 0121 8.688v8.123zM11.25 16.811c0 .864-.933 1.405-1.683.977l-7.108-4.062a1.125 1.125 0 010-1.953L9.567 7.71a1.125 1.125 0 011.683.977v8.123z" />
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
+                <path d="M7.712 4.819A1.5 1.5 0 0110 6.095v2.973c.104-.131.234-.248.389-.344l6.323-3.905A1.5 1.5 0 0119 6.095v7.81a1.5 1.5 0 01-2.288 1.277l-6.323-3.905a1.505 1.505 0 01-.389-.344v2.973a1.5 1.5 0 01-2.288 1.276l-6.323-3.905a1.5 1.5 0 010-2.553L7.712 4.82z" />
               </svg>
             </div>
             <div class="rounded-full w-12 h-12 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267" id="play-button">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8" id="play-button-pause">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25v13.5m-7.5-13.5v13.5" />
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8" id="play-button-pause">
+                <path d="M5.75 3a.75.75 0 00-.75.75v12.5c0 .414.336.75.75.75h1.5a.75.75 0 00.75-.75V3.75A.75.75 0 007.25 3h-1.5zM12.75 3a.75.75 0 00-.75.75v12.5c0 .414.336.75.75.75h1.5a.75.75 0 00.75-.75V3.75a.75.75 0 00-.75-.75h-1.5z" />
               </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 hidden" id="play-button-resume">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8 hidden" id="play-button-resume">
+                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
               </svg>
             </div>
             <div class="rounded-full w-8 h-8 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M3 8.688c0-.864.933-1.405 1.683-.977l7.108 4.062a1.125 1.125 0 010 1.953l-7.108 4.062A1.125 1.125 0 013 16.81V8.688zM12.75 8.688c0-.864.933-1.405 1.683-.977l7.108 4.062a1.125 1.125 0 010 1.953l-7.108 4.062a1.125 1.125 0 01-1.683-.977V8.688z" />
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
+                <path d="M3.288 4.819A1.5 1.5 0 001 6.095v7.81a1.5 1.5 0 002.288 1.277l6.323-3.905c.155-.096.285-.213.389-.344v2.973a1.5 1.5 0 002.288 1.276l6.323-3.905a1.5 1.5 0 000-2.553L12.288 4.82A1.5 1.5 0 0010 6.095v2.973a1.506 1.506 0 00-.389-.344L3.288 4.82z" />
               </svg>
             </div>
           </div>
-          <div class="flex basis-1/3 items-center justify-center"></div>
+          <div class="flex basis-1/3 items-center justify-center">
+
+          </div>
         </div>
       </div>
     </div>
