--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 <div id="panel-album-list" class="flex flex-wrap overflow-scroll"></div>
               </div>
             <div id="panel-tracks-list" class="pl-10 pr-10 pb-16 space-y-4 flex flex-col absolute left-0 min-h-[90%] max-h-[90%] w-full hidden">
-              <div class="absolute mr-20 top-0 right-0 cursor-pointer mt-2" id="panel-tracks-list-close-button">
+              <div class="absolute mr-20 top-0 right-0 cursor-pointer mt-2 hover:bg-dark-celeria rounded-md" id="panel-tracks-list-close-button">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-white-1">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
@@ -82,7 +82,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col w-full pt-6 overflow-scroll" id="panel-tracks-list-container"></div>
+              <div class="flex flex-col w-full pt-6 overflow-scroll pr-2" id="panel-tracks-list-container"></div>
             </div>
           </div>
         </div>
@@ -91,8 +91,10 @@
         <div class="h-1 duration-500 ease-in-out" style="background: #0e91a6; width: 0;" id="music-progress"></div>
         <div class="w-full h-full flex flex-row">
           <div class="pl-5 flex flex-row space-x-4 h-full items-center basis-1/3">
-            <div class="w-16 h-16 rounded-lg bg-white-3" id="no-music-cover"></div>
-            <img class="w-16 h-16 object-cover rounded-lg hidden" src="" id="music-cover">
+            <div>
+              <div class="w-16 h-16 rounded-lg bg-white-3" id="no-music-cover"></div>
+              <img class="w-16 h-16 object-cover rounded-lg hidden" src="" id="music-cover">
+            </div>
             <div class="flex flex-col justify-center">
               <p class="text-mukta font-bold text-white-1 text-lg break-properly max-w-[20rem]" id="music-title"></p>
               <p class="text-mukta text-white-1 opacity-60 text-md" id="music-subtitle"></p>
@@ -100,7 +102,7 @@
             </div>
           </div>
           <div class="flex basis-1/3 items-center justify-center space-x-7">
-            <div class="rounded-full w-8 h-8 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267;">
+            <div class="rounded-full w-8 h-8 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267;" id="previous-button">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
                 <path d="M7.712 4.819A1.5 1.5 0 0110 6.095v2.973c.104-.131.234-.248.389-.344l6.323-3.905A1.5 1.5 0 0119 6.095v7.81a1.5 1.5 0 01-2.288 1.277l-6.323-3.905a1.505 1.505 0 01-.389-.344v2.973a1.5 1.5 0 01-2.288 1.276l-6.323-3.905a1.5 1.5 0 010-2.553L7.712 4.82z" />
               </svg>
@@ -113,7 +115,7 @@
                 <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
               </svg>
             </div>
-            <div class="rounded-full w-8 h-8 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267">
+            <div class="rounded-full w-8 h-8 text-white-1 flex justify-center items-center cursor-pointer hover:opacity-70" style="background: #1f6267" id="next-button">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
                 <path d="M3.288 4.819A1.5 1.5 0 001 6.095v7.81a1.5 1.5 0 002.288 1.277l6.323-3.905c.155-.096.285-.213.389-.344v2.973a1.5 1.5 0 002.288 1.276l6.323-3.905a1.5 1.5 0 000-2.553L12.288 4.82A1.5 1.5 0 0010 6.095v2.973a1.506 1.506 0 00-.389-.344L3.288 4.82z" />
               </svg>
