--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/tailwind.css">
   </head>
   <body>
-    <div id="app" class="flex h-screen flex-col">
+    <div id="app" class="flex h-screen flex-col select-none">
       <div class="flex flex-row h-[90%] w-screen justify-between">
         <div id="left-panel" class="h-full w-3/12 min-w-64 max-w-80 select-none">
           <div class="flex flex-row pt-4 pl-2 items-center absolute">
@@ -16,19 +16,19 @@
             <h1 class="text-white-1 font-bold text-xl xl:text-2xl">eleria Music Player</h1>
           </div>
           <div class="flex w-full h-full flex-col justify-center">
-            <div class="h-16 flex items-center left-menu-selection left-menu-selection-selected">
+            <div class="h-16 flex items-center left-menu-selection left-menu-selection-selected left-menu-hover cursor-pointer" id="left-menu-item-albums">
               <h3 class="text-white-1 text-mukta text-xl pl-8">Albums</h3>
             </div>
-<!--            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mt-2 mb-3"></div>-->
-            <div class="h-16 flex items-center">
+            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mt-2 mb-2 hidden" id="left-menu-separator-albums"></div>
+            <div class="h-16 max-h-[4rem] flex items-center left-menu-hover cursor-pointer" id="left-menu-item-tracks">
               <h3 class="text-white-1 text-mukta text-xl pl-8">Morceaux</h3>
             </div>
-            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mb-1 mt-1"></div>
-            <div class="h-16 flex items-center">
+            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mt-2 mb-2" id="left-menu-separator-tracks"></div>
+            <div class="h-16 flex items-center left-menu-hover cursor-pointer" id="left-menu-item-playlists">
               <h3 class="text-white-1 text-mukta text-xl pl-8">Playlists</h3>
             </div>
-            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mb-1 mt-1"></div>
-            <div class="h-16 flex items-center">
+            <div class="border-white-1 opacity-10 border-[0.1px] ml-8 mr-8 mt-2 mb-2" id="left-menu-separator-playlists"></div>
+            <div class="h-16 flex items-center left-menu-hover cursor-pointer" id="left-menu-item-downloader">
               <h3 class="text-white-1 text-mukta text-xl pl-8">Downloader</h3>
             </div>
           </div>
@@ -61,10 +61,10 @@
             </div>
           </div>
           <div id="main-panel-content">
-              <div id="panel-album" class="pl-10 space-y-4 pt-16 pb-16 pr-10 absolute left-0 w-full flex flex-col min-h-[90%] max-h-[90%] hidden">
-                <h1 class="text-white-1 text-mukta text-4xl font-bold">Albums à votre disposition</h1>
-                <div id="panel-album-list" class="flex flex-wrap overflow-scroll"></div>
-              </div>
+            <div id="panel-album" class="pl-10 space-y-4 pt-16 pb-16 pr-10 absolute left-0 w-full flex flex-col min-h-[90%] max-h-[90%] hidden">
+              <h1 class="text-white-1 text-mukta text-4xl font-bold">Albums à votre disposition</h1>
+              <div id="panel-album-list" class="flex flex-wrap overflow-scroll"></div>
+            </div>
             <div id="panel-tracks-list" class="pl-10 pr-10 pb-16 space-y-4 flex flex-col absolute left-0 min-h-[90%] max-h-[90%] w-full hidden">
               <div class="absolute mr-20 top-0 right-0 cursor-pointer mt-2 hover:bg-dark-celeria rounded-md" id="panel-tracks-list-close-button">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-white-1">
@@ -84,13 +84,19 @@
               </div>
               <div class="flex flex-col w-full pt-6 overflow-scroll pr-2" id="panel-tracks-list-container"></div>
             </div>
+            <div id="panel-in-dev" class="pl-10 space-y-4 pt-16 pb-16 pr-10 absolute left-0 w-full flex flex-col min-h-[90%] max-h-[90%] hidden">
+              <h1 class="text-white-1 text-mukta text-4xl font-bold select-text pr-8">Ce menu n'est pas encore disponible.</h1>
+              <div class="pl-8 pr-8 pt-2">
+                <h2 class="text-white-1 text-mukta text-2xl select-all">Ce menu est encore en cours de développement et arrivera prochainement. <br>Vous pouvez nous rejoindre sur Discord : <a href="https://discord.com/invite/93s7WzBbq7" class="text-purple-500 font-bold text-mukta">https://discord.com/invite/93s7WzBbq7</a> pour obtenir des informations sur l'avancée du projet.</h2>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div id="bottom-panel" class="w-screen h-[10%] min-h-[85px] flex flex-col fixed bottom-0 left-0">
-        <div class="h-1 duration-500 ease-in-out" style="background: #0e91a6; width: 0;" id="music-progress"></div>
+        <music-progress min-value=0 max-value=100 reloadRequire class="h-1 duration-500 ease-in-out w-full cursor-pointer" id="music-progress"></music-progress>
         <div class="w-full h-full flex flex-row">
-          <div class="pl-5 flex flex-row space-x-4 h-full items-center basis-1/3">
+          <div class="pl-8 flex flex-row space-x-4 h-full items-center basis-1/3">
             <div>
               <div class="w-16 h-16 rounded-lg bg-white-3" id="no-music-cover"></div>
               <img class="w-16 h-16 object-cover rounded-lg hidden" src="" id="music-cover">
@@ -121,12 +127,22 @@
               </svg>
             </div>
           </div>
-          <div class="flex basis-1/3 items-center justify-center">
-
+          <div class="flex basis-1/3 items-center justify-end pr-8">
+            <div class="flex flex-row items-center justify-end w-1/2 space-x-4">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7 text-white-1">
+                  <path d="M13.5 4.06c0-1.336-1.616-2.005-2.56-1.06l-4.5 4.5H4.508c-1.141 0-2.318.664-2.66 1.905A9.76 9.76 0 001.5 12c0 .898.121 1.768.35 2.595.341 1.24 1.518 1.905 2.659 1.905h1.93l4.5 4.5c.945.945 2.561.276 2.561-1.06V4.06zM18.584 5.106a.75.75 0 011.06 0c3.808 3.807 3.808 9.98 0 13.788a.75.75 0 11-1.06-1.06 8.25 8.25 0 000-11.668.75.75 0 010-1.06z" />
+                  <path d="M15.932 7.757a.75.75 0 011.061 0 6 6 0 010 8.486.75.75 0 01-1.06-1.061 4.5 4.5 0 000-6.364.75.75 0 010-1.06z" />
+                </svg>
+              </div>
+              <label for="sound-progressbar"></label>
+              <input type="range" class="w-1/2 h-3 rounded-md cursor-pointer test" id="sound-progressbar">
+            </div>
           </div>
         </div>
       </div>
     </div>
     <script type="module" src="/ts/main.ts"></script>
+    <script type="module" src="/ts/custom_elements/music_progress.ts"></script>
   </body>
 </html>
