--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./css/tailwind.css">
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div id="app" class="flex h-screen flex-col select-none">
       <div class="flex flex-row h-[90%] w-screen justify-between">
         <div id="left-panel" class="h-full w-3/12 min-w-64 max-w-80 select-none">
@@ -33,7 +33,7 @@
             </div>
           </div>
         </div>
-        <div id="main-panel" class="h-full w-10/12 relative ml-auto mb-auto">
+        <div id="main-panel" class="h-full min-w-[83.333333%] w-full relative ml-auto mb-auto">
           <div data-tauri-drag-region id="custom-top-bar" class="w-full h-14 flex justify-end pr-2 z-50">
             <div class="text-white-1 flex flex-row space-x-2 mt-2">
               <div class="w-8 h-8 min-w-[2rem] min-h-[2rem] hover:opacity-40 hover:left-menu-selection cursor-pointer flex justify-center items-end" id="titlebar-minimize" style="padding-bottom: 8px">
@@ -205,7 +205,13 @@
             </div>
           </div>
           <div class="flex basis-1/3 items-center justify-end pr-8">
-            <div class="flex flex-row items-center justify-end w-1/2 space-x-4">
+            <div class="relative flex flex-row items-center justify-end w-1/2 space-x-3 h-[10%] min-h-[85px]">
+              <div id="queue-container" class="absolute bottom-0 right-0 w-80 h-80 bg-dark-celeria-2 shadow-2xl drop-shadow-2xl flex flex-col overflow-scroll hidden" style="transform: translateY(-40%) translateX(-45%);"></div>
+              <div class="hover:opacity-70 cursor-pointer" id="queue-button">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7 text-white-1">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z" />
+                </svg>
+              </div>
               <div id="sound-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7 text-white-1 cursor-pointer" id="sound-button-mute">
                   <path d="M13.5 4.06c0-1.336-1.616-2.005-2.56-1.06l-4.5 4.5H4.508c-1.141 0-2.318.664-2.66 1.905A9.76 9.76 0 001.5 12c0 .898.121 1.768.35 2.595.341 1.24 1.518 1.905 2.659 1.905h1.93l4.5 4.5c.945.945 2.561.276 2.561-1.06V4.06zM18.584 5.106a.75.75 0 011.06 0c3.808 3.807 3.808 9.98 0 13.788a.75.75 0 11-1.06-1.06 8.25 8.25 0 000-11.668.75.75 0 010-1.06z" />
@@ -214,10 +220,9 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7 text-white-1 cursor-pointer hidden" id="sound-button-unmute">
                   <path d="M13.5 4.06c0-1.336-1.616-2.005-2.56-1.06l-4.5 4.5H4.508c-1.141 0-2.318.664-2.66 1.905A9.76 9.76 0 001.5 12c0 .898.121 1.768.35 2.595.341 1.24 1.518 1.905 2.659 1.905h1.93l4.5 4.5c.945.945 2.561.276 2.561-1.06V4.06zM17.78 9.22a.75.75 0 10-1.06 1.06L18.44 12l-1.72 1.72a.75.75 0 001.06 1.06l1.72-1.72 1.72 1.72a.75.75 0 101.06-1.06L20.56 12l1.72-1.72a.75.75 0 00-1.06-1.06l-1.72 1.72-1.72-1.72z" />
                 </svg>
-
               </div>
               <label for="sound-progressbar"></label>
-              <input type="range" class="w-1/2 h-3 rounded-md cursor-pointer test" id="sound-progressbar">
+              <input type="range" class="w-1/2 h-3 rounded-md cursor-pointer max-w-[12rem] min-w-[8rem]" id="sound-progressbar">
             </div>
           </div>
         </div>
